# agentic-ai-basic-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  developer-guide.md  getting-started.md  operations.md  roadmap.md
src/agents/: __init__.py  base.py  mock_agent.py
src/cli/: __init__.py  exporter.py  formatters.py  main.py  parser.py  session.py  session_manager.py
src/common/: __init__.py  config.py  exceptions.py  types.py
src/memory/: __init__.py  context_tracker.py
tests/: conftest.py
tests/agents/: test_base.py  test_mock_agent.py
tests/cli/: __init__.py  test_exporter.py  test_formatters.py  test_parser.py  test_session.py  test_session_manager.py
tests/common/: __init__.py  test_config.py  test_types.py
tests/memory/: test_context_tracker.py
